// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormLayout component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-form-layout"
  />
</DocumentFragment>
`;

exports[`InputWrap component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-input-wrap"
  />
</DocumentFragment>
`;

exports[`InputWrapFull component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-5 el-input-wrap-full"
  />
</DocumentFragment>
`;

exports[`InputWrapHalf component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-6 el-input-wrap-half"
  />
</DocumentFragment>
`;

exports[`InputWrapMed component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 el-input-wrap-med"
  />
</DocumentFragment>
`;
